RESOLVED FIXED136872
[Mac] MediaPlayerPrivateAVFoundationObjC::paintWithVideoOutput doesn't work with rotated movies
https://bugs.webkit.org/show_bug.cgi?id=136872
Summary [Mac] MediaPlayerPrivateAVFoundationObjC::paintWithVideoOutput doesn't work w...
Eric Carlson
Reported 2014-09-16 15:01:07 PDT
MediaPlayerPrivateAVFoundationObjC::paintWithVideoOutput doesn't consider a video track with a transform.
Attachments
Proposed patch. (3.43 KB, patch)
2014-09-16 15:08 PDT, Eric Carlson
thorton: review+
Eric Carlson
Comment 1 2014-09-16 15:03:07 PDT
Eric Carlson
Comment 2 2014-09-16 15:08:51 PDT
Created attachment 238215 [details] Proposed patch.
Brent Fulgham
Comment 3 2014-09-16 16:12:22 PDT
Brent Fulgham
Comment 4 2014-09-16 16:27:31 PDT
Note You need to log in before you can comment on or make changes to this bug.