[Mac] MediaPlayerPrivateAVFoundationObjC::paintWithVideoOutput doesn't work with rotated movies https://bugs.webkit.org/show_bug.cgi?id=136872

Patch by Eric Carlson <eric.carlson@apple.com> on 2014-09-16
Reviewed by Tim Horton.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::paintWithImageGenerator): Add logging.
(WebCore::MediaPlayerPrivateAVFoundationObjC::paintWithVideoOutput): Apply the video track
    preferred transform.


Canonical link: https://commits.webkit.org/152923.415@safari-600.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-600.1-branch@173677 268f45cc-cd09-0410-ab3c-d52691b4dbfc